--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Film Search</string>
+    <string name="film_poster">Постер фильма</string>
+    <string name="change_film_country">Изменить страну, выпустившую фильм</string>
 </resources>
