--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,10 @@
     <string name="connection_on">соединение подключено</string>
     <string name="connection_off">соединение отключено</string>
     <string name="error_get_films">Ошибка при получении данных. Попробуйте позже</string>
+    <string name="error_creating_database">Не задано приложение перед создание базы данных</string>
+    <string name="menu_title_history">История заметок</string>
+    <string name="bt_save_film_note_text">Сохранить заметку</string>
+    <string name="film_note_saved">Заметка сохранена</string>
+    <string name="film_settings">Настройки отображения</string>
+    <string name="adult_content_text">Контент для взрослых</string>
 </resources>
