--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,5 @@
     <string name="contact_access_positive_btn_text">Предоставить доступ</string>
     <string name="contact_access_negative_btn_text">Не предоставлять</string>
     <string name="contact_access_negative_btn_close_text">Закрыть</string>
+    <string name="authorities">com.afrosin.filmsearch.provider</string>
 </resources>
